fixed header problem on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,8 @@ div.fixedheader {
   position: fixed;
   width: 100%;
   background-color: black;
+  top:0;
+  z-index:999999;
 }
 
 nav {
